# todolist-backend

./: Cargo.toml  LICENSE  README.md
migrations/2021-07-20-223714_create_users/: up.sql
migrations/2021-07-20-235206_password_column/: down.sql  up.sql
migrations/2021-07-21-012008_alter_password_hash_for_bcrypt/: down.sql  up.sql
migrations/2021-07-21-012533_users_password_column_name/: down.sql  up.sql
migrations/2021-07-21-014133_users_add_login_session/: down.sql  up.sql
migrations/2021-07-21-023839_users_login_session_not_null/: down.sql  up.sql
migrations/2021-07-21-152719_users_password_name/: down.sql  up.sql
migrations/2021-07-21-155731_users_fix_column_names/: down.sql  up.sql
migrations/2021-07-21-172651_users_remove_login_session/: down.sql  up.sql
migrations/2021-07-21-220651_create_lists/: up.sql
migrations/2021-07-21-221212_create_items/: up.sql
migrations/2021-07-21-221604_items_list_id_non_null/: down.sql  up.sql
migrations/2021-07-21-221818_create_user_lists/: down.sql  up.sql
migrations/2021-07-22-152738_user_lists_add_owner/: down.sql  up.sql
migrations/2021-07-22-163209_user_lists_cascade/: down.sql  up.sql
migrations/2021-07-22-220628_items_cascade/: down.sql  up.sql
migrations/2021-07-24-164348_user_lists_cascade_when_user_deleted/: down.sql  up.sql
src/: auth.rs  constants.rs  database.rs  jwt.rs  lib.rs  main.rs  models.rs  routes.rs  schema.rs  user.rs
src/model/: mod.rs
src/models/: item.rs  list.rs  mod.rs  response.rs  user.rs  user_lists.rs
src/routes/: lists.rs  mod.rs  users.rs
src/services/: mod.rs  (+2 more)
