[package]
name = "todo-backend"
version = "0.1.0"
edition = "2018"
authors = ["Nicholas Salesky <nicksalesky@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.1", features = ["json"]}
rust-crypto = "^0.2"
serde = {version = "1.0.126", features = ["derive"]}
serde_json = "1.0.64"

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
default-features = false
features = ["postgres_pool"]