[package]
name = "todo-backend"
version = "0.1.0"
edition = "2018"
authors = ["Nicholas Salesky <nicksalesky@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.1", features = ["json"]}
serde = {version = "1.0.126", features = ["derive"]}
serde_json = "1.0.64"
jsonwebtoken = "7.2.0"
bcrypt = "0.10.1"

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
default-features = false
features = ["diesel_postgres_pool"]

[dependencies.diesel]
version = "1.4.4"
features = ["postgres"]

[dependencies.uuid]
version = "0.8.2"
features = ["v4"]

[dependencies.chrono]
version = "0.4.19"
features = ["serde"]